@@ -172,7 +172,7 @@ class UserIndex extends Files\CreateFile
         $ret       .= $this->xc->getXcHandlerCountObj($tableName);
         $ret       .= $this->xc->getXcXoopsTplAssign($tableName . 'Count', "\${$tableName}Count");
         $ret       .= $this->getSimpleString('$count = 1;');
-        $condIf    = $this->xc->getXcXoopsRequest('start', 'start', '0', 'Int', false, "\t");
+        $condIf    = $this->xc->getXcXoopsRequest('start', 'start', '', 'Int', false, "\t");
         $userpager = $this->xc->getXcGetConfig('userpager');
         $condIf    .= $this->xc->getXcXoopsRequest('limit', 'limit', $userpager, 'Int', false, "\t");
         $condIf    .= $this->xc->getXcHandlerAllObj($tableName, '', '$start', '$limit', "\t");
